--- a/algorithms_basic_01.ipynb
+++ b/algorithms_basic_01.ipynb
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##02) Find a Factorial  of a Non-negative Integer N\n",
+    "##02) Find a Factorial  of a Non-negative Integer n\n",
     "In mathematics, the factorial of a non-negative integer n, denoted by n!, is the product of all positive integers less than or equal to n. For example, $$5! = 5  \\times  4  \\times  3  \\times  2  \\times  1 = 120.  \\ $$\n",
     "Write a function factorial(n) which takes as input a positive integer n and return n!."
    ]
