--- a/algorithms_logic_01.ipynb
+++ b/algorithms_logic_01.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##01) Truth Tables\n",
+    "##01) The Truth Table\n",
     "Suppose truth_function is a function which takes as input two boolean values $P$ and $Q$ and returns a new Boolean value. Then we can print out a truth table for truth_function. Here is a function which does this:"
    ]
   },
