--- a/algorithms_tuples_sets.ipynb
+++ b/algorithms_tuples_sets.ipynb
@@ -952,13 +952,15 @@
    "source": [
     "##11) The Lagrange's four-square theorem\n",
     "Lagrange's four-square theorem, also known as Bachet's conjecture, states that every natural number can be represented as the sum of four integer squares.\n",
+    "\n",
     "$$p = a_0^2 + a_1^2 + a_2^2 + a_3^2\\ $$\n",
     "\n",
     "where the four numbers a_0, a_1, a_2, a_3 are integers. For illustration, 3, 31 and 310 can be represented as the sum of four squares as follows:\n",
+    "\n",
     "\\begin{align}\n",
-    "3 & = 1^2+1^2+1^2+0^2 \\\\[3pt]\n",
-    "31 & = 5^2+2^2+1^2+1^2 \\\\[3pt]\n",
-    "310 & = 17^2+4^2+2^2+1^2.\n",
+    "3 = 1^2+1^2+1^2+0^2 \\\\\n",
+    "31 = 5^2+2^2+1^2+1^2 \\\\\n",
+    "310 = 17^2+4^2+2^2+1^2.\n",
     "\\end{align}\n",
     "\n",
     "Lagrange's four-square theorem states that any non-negative integer is the sum of the squares of four integers. Write a function lagrange_four_square(n) which takes as input a non-negative integer n and returns a quadruple (a,b,c,d) of integers so that $n=a^2+b^2+c^2+d^2.$"
@@ -987,7 +989,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##12) Check a Rectangle is square\n",
+    "##12) Check a Rectangle is a Square\n",
     "Write a function is_square which takes as input four points in the plane with integer coordinates and returns the truth-value of the statement \"The four points are the vertices of a square.\"\n",
     "- INPUT: square = (0, 0), (2, 0), (0, 2), (2,2) = a,b,c,d\n",
     "- OUTPUT: True\n",
@@ -1041,15 +1043,6 @@
     "\n",
     "        return coord"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
