--- a/algorithms_tuples_sets.ipynb
+++ b/algorithms_tuples_sets.ipynb
@@ -144,7 +144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 03) Average of numbers in a tuple\n",
+    "## 03) Average of Numbers in a tuple\n",
     "The following computes the average of a students grades provided as a tuple. "
    ]
   },
@@ -465,7 +465,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 04) Sumset of two sets of numbers\n",
+    "## 04) Sumset of two Sets of Numbers\n",
     "Suppose A and B are two sets of numbers. Their sumset is the set\n",
     "\n",
     "$$\\{a+b : a \\in A \\space and \\space b \\in B\\}.$$\n",
@@ -515,7 +515,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 05) Find a Set of Divisors of a Integer number n\n",
+    "## 05) Find a Set of Divisors of a Integer Number n\n",
     "A divisor of an integer n, is an integer d so that d divides n, i.e., so that $\\frac{n}{d} \\in \\mathbb{Z}.$ Write a function whose name is divisors which takes as input an integer n and returns the set of positive divisors of n."
    ]
   },
@@ -699,7 +699,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 07) The Sum of squares \n",
+    "## 07) The Sum of Squares \n",
     "The following is a simple function which checks if a integer n can be written as a sum of two squares of integers a and b, $n=a^2+b^2.$ It will return such a pair (a,b) if n can be written as a sum of squares and will return None if it can not.\n",
     " "
    ]
@@ -785,7 +785,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##08) The Cartestian Product\n",
+    "##08) The Cartesian Product\n",
     "In mathematics, a Cartesian product is a mathematical operation which returns a set (or product set or simply product) from multiple sets. That is, for sets A and B, the Cartesian product A × B is the set of all ordered pairs (a, b) where a ∈ A and b ∈ B. Products can be specified using set-builder notation, e.g.\n",
     "\n",
     "$$A\\times B = \\{\\,(a,b)\\mid a\\in A \\ \\mbox{ and } \\ b\\in B\\,\\}.$$\n",
