--- a/algorithms_basic.ipynb
+++ b/algorithms_basic.ipynb
@@ -20,6 +20,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##Examples"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
@@ -78,7 +85,10 @@
    "metadata": {},
    "source": [
     "##02) Find a Factorial  of a Non-negative Integer n\n",
-    "In mathematics, the factorial of a non-negative integer n, denoted by n!, is the product of all positive integers less than or equal to n. For example, $$5! = 5  \\times  4  \\times  3  \\times  2  \\times  1 = 120.  \\ $$\n",
+    "In mathematics, the factorial of a non-negative integer n, denoted by n!, is the product of all positive integers less than or equal to n. For example, \n",
+    "\n",
+    "$$5! = 5  \\times  4  \\times  3  \\times  2  \\times  1 = 120.  \\ $$\n",
+    "\n",
     "Write a function factorial(n) which takes as input a positive integer n and return n!."
    ]
   },
@@ -238,6 +248,7 @@
    "source": [
     "##04) Sum of Cubes of a Positive Integer n\n",
     "Write a function called sum_of_cubes(n) which takes as input a positive integer  n  and returns the sum. \n",
+    "\n",
     "$$1^3+2^3+3^3+…+n^3=\\displaystyle\\sum_{j=1}^{n} j^3$$"
    ]
   },
@@ -304,6 +315,7 @@
    "source": [
     "##06) Find an Area of a Triangle from its Three Side Lengths\n",
     "The following function computes the area of a triangle from its three side lengths. This is the semiperimeter formula for area of a triangle.  $\\textbf{Heron's formula}$ states that the area of a triangle whose sides have lengths a, b, and c is: \n",
+    "\n",
     "$$A=\\sqrt{s(s-a)(s-b)(s-c)}, \\space\\space where \\space\\space s=\\frac{a+b+c}{2}$$"
    ]
   },
@@ -380,7 +392,10 @@
    "source": [
     "##08) A Root finding Algorithm with the Newton's Method\n",
     "Newton's method is a very efficient way to find a root of a differentiable function $f$ starting with a point near the root. The method gives a sequence  $x_0,x_1,x_2,\\dots$ of numbers which rapidly approach the root if the initial point is sufficiently close to the root. The value  $x_0$ is the starting point. Given  $x_k$ the value of  $x_{k+1}$  by intersecting the  $x-axis$ with tangent line to the graph of f at the point  $(x_k,f(x_k))$. That is,\n",
-    "$$x_{k+1} = x_k - \\frac{f(x_k)}{f'(x_k)}$$ An illustration of this process is shown at the end of this question.\n",
+    "\n",
+    "$$x_{k+1} = x_k - \\frac{f(x_k)}{f'(x_k)}$$ \n",
+    "\n",
+    "An illustration of this process is shown at the end of this question.\n",
     "Write a function newtons_method$(f,df,x_0,n)$ which takes as input a function  $f:\\mathbb{ℝ}\\to \\mathbb{ℝ}$, its derivative  $df=f′$(also a function from  $\\mathbb{ℝ}$ to $\\mathbb{ℝ}$ ), an initial point $x_0$ and an integer  $n\\geq1$. The function should return the value  $x_n$ obtained by iterating Newton's method n times."
    ]
   },
@@ -437,6 +452,7 @@
    "source": [
     "##09) Write an Algorithms of The Collatz Conjecture\n",
     "The Collatz conjecture can be summarized as follows. Take any natural number $n$. If n is even, divide it by 2 to get $\\frac{n}{2}$. If n is odd, multiply it by 3 and add 1 to obtain $3n + 1$. Repeat the process (which has been called \"Half Or Triple Plus One\", or HOTPO[6]) indefinitely. The conjecture is that no matter what number you start with, you will always eventually reach 1. The property has also been called oneness. In modular arithmetic notation, define the function f as follows: \n",
+    "\n",
     "$$f(n) =\n",
     "  \\begin{cases}\n",
     "    n/2   & \\quad \\text{if } n \\equiv 0 \\space \\text{(mod 2)}\\\\\n",
@@ -484,7 +500,9 @@
    "source": [
     "##10) Approximate a definite integral of a real valued function\n",
     "An approximation to a definite integral of a real valued function is\n",
+    "\n",
     "$$\\int_a^b f(x)dx \\approx \\frac{b-a}{n} \\displaystyle\\sum_{i=0}^{n-1} f\\left(a+\\frac{i(b-a)}{n}\\right)$$\n",
+    "\n",
     "for large values of  $n$. Here is a function which evaluates this sum on an arbitrary function."
    ]
   },
