--- a/algorithms_tuples_sets.ipynb
+++ b/algorithms_tuples_sets.ipynb
@@ -46,6 +46,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##Examples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 01) Baricenter\n",
     "The baricenter of a triangle is the average of its coordinates. The following computes the baricenter of a triangle (given as a 3-tuple of vertices). This point is always inside the triangle."
    ]
@@ -303,6 +310,13 @@
    "source": [
     "B = {1, 2, 3, 2, 3, 2}\n",
     "print('The Set B is', B)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##Examples"
    ]
   },
   {
