--- a/algorithms_lists.ipynb
+++ b/algorithms_lists.ipynb
@@ -657,7 +657,7 @@
     "Write a function catalan_numbers(n) which returns the list of the first n Catalan numbers:\n",
     "$[C_0, C_1,\\dots, C_{n−1}].$ \n",
     "\n",
-    "Remark: All you really need to know about the Catalan numbers is that $C_0 = 1$ and the summation formula above. (The Catalan numbers show up in a lot of counting problems. Wikipedia has a nice article on the Catalan numbers.)"
+    "Remark: All you really need to know about the Catalan numbers is that $C_0 = 1$ and the summation formula above. (The Catalan numbers show up in a lot of counting problems. Wikipedia has a nice article on <a href=\"https://en.wikipedia.org/wiki/Catalan_number\" target=\"_blank\">the Catalan numbers</a>.)"
    ]
   },
   {
