renamed basic.py to numbers.py

--- a/algorithms_numbers.ipynb
+++ b/algorithms_numbers.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 01. Mathematical Algorithms - Basics\n",
+    "# 01. Mathematical Algorithms - Numbers\n",
     "- Title: Mathematical Algorithms Basics in Python\n",
     "- Date: Oct/06/2015, Tuesday - Current\n",
     "- Author: Minwoo Bae (minubae.nyc@gmail.com)\n",
@@ -15,15 +15,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 01) Find Divisors of a Natural Number P\n",
-    "Suppose  p  and  $n\\neq0$  are integers. We call  n a divisor of  p  if  $\\frac{p}{n}$  is an integer (or equivalently if  n  divides  p  with zero remainder). Write a function print_divisors(p) which takes as input an integer  $p\\geq1$  and prints all its positive divisors."
+    "##Examples"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Examples"
+    "## 01) Find Divisors of a Natural Number P\n",
+    "Suppose  p  and  $n\\neq0$  are integers. We call  n a divisor of  p  if  $\\frac{p}{n}$  is an integer (or equivalently if  n  divides  p  with zero remainder). Write a function print_divisors(p) which takes as input an integer  $p\\geq1$  and prints all its positive divisors."
    ]
   },
   {
