--- a/algorithms_recursion.ipynb
+++ b/algorithms_recursion.ipynb
@@ -624,9 +624,335 @@
     "\n",
     "Through consideration of this set, Cantor and others helped lay the foundations of modern point-set topology. Although Cantor himself defined the set in a general, abstract way, the most common modern construction is the Cantor ternary set, built by removing the middle thirds of a line segment. Cantor himself only mentioned the ternary construction in passing, as an example of a more general idea, that of a perfect set that is nowhere dense.\n",
     "\n",
+    "### Construction and formula of the ternary set\n",
+    "The Cantor ternary set is created by deleting the open middle third from each of a set of line segments repeatedly. One starts by deleting the open middle third $(\\frac{1}{3},\\frac{2}{3})$ from the interval $[0,1],$ leaving two line segments: $[0,\\frac{1}{3}]\\cup [\\frac{2}{3},1].$ Next, the open middle third of each of these remaining segments is deleted, leaving four line segments: $[0,\\frac{1}{9}]\\cup[\\frac{2}{9},\\frac{1}{3}]\\cup[\\frac{2}{3},\\frac{7}{9}]\\cup[\\frac{8}{9},1].$ This process is continued ad infinitum, where the $n^{th}$ set is\n",
+    "\n",
+    "$$C_n = \\frac{C_{n-1}}{3}\\cup \\bigg(\\frac{2}{3} + \\frac{C_{n-1}}{3} \\bigg) \\space\\space and \\space\\space C_0 = [0,1].$$\n",
+    "\n",
+    "The Cantor ternary set contains all points in the interval $[0, 1]$ that are not deleted at any step in this infinite process. The middle third Cantor set is defined by  $C = \\bigcap_{i=0}^\\infty C_i.$\n",
+    "\n",
+    "An explicit closed formula for the Cantor set is\n",
+    "\n",
+    "$$\n",
+    "C = \\bigcap_{m=1}^\\infty \\bigcap_{k=0}^{3^{m-1}-1} \\left(\\left[0,\\frac{3k+1}{3^m}\\right] \\cup \\left[\\frac{3k+2}{3^m},1\\right]\\right)\n",
+    "$$\n",
+    "or\n",
+    "$$\n",
+    "C=[0,1] \\setminus \\bigcup_{m=1}^\\infty \\bigcup_{k=0}^{3^{m-1}-1} \\left(\\frac{3k+1}{3^m},\\frac{3k+2}{3^m}\\right).\n",
+    "$$\n",
+    "\n",
+    "The proof of the formula above as the special case of two family of Cantor sets is done by the idea of self-similarity transformations and can be found in detail.\n",
+    "\n",
+    "This process of removing middle thirds is a simple example of a finite subdivision rule.\n",
+    "\n",
+    "It is perhaps most intuitive to think about the Cantor set as the set of real numbers between zero and one whose ternary expansion in base three doesn't contain the digit 1. This ternary digit expansion description has been more of interest for researchers to explore fractal and topological properties of the Cantor set.\n",
+    "\n",
+    "Write a function cantors_set_contains(n,x) which takes as input an integer  $n\\geq0$ and returns the truth value of the statement $x\\in C_n.$\n",
+    "\n",
+    "You do not have to use recursion. But, if you want to use recursion, it might be helpful to use the function $f:C_1 \\to C_0$ by\n",
+    "\n",
+    "$$\n",
+    "f(n) =\n",
+    "  \\begin{cases}\n",
+    "    3x       & \\quad \\text{if } x \\in [0, \\frac{1}{3}]\\\\\n",
+    "    3x - 2  & \\quad \\text{if } x \\in [\\frac{2}{3},1]\\\\\n",
+    "  \\end{cases}.\n",
+    "$$\n",
+    "\n",
+    "Then you can define $C_i$ by iteration:\n",
+    "\n",
+    "$$C_i = \\{x \\in [0,1] :  \\{x, f(x), f^{\\circ 2}(x),\\dots,f^{\\circ (i-1)}(x) \\} \\subset C_1\\}.$$\n",
+    "\n",
+    "An equivalent way to define $C_i$ is\n",
+    "\n",
+    "$$C_i = \\{x:f^{\\circ i}(x) \\space\\space is \\space\\space well-defined\\}.$$\n",
+    "\n",
+    "Hint: For testing, it may be useful to note that $\\frac{1}{4}\\in C$ while  $\\frac{1}{2\\cdot 3^k}\\notin C$ for any integer $k\\geq0.$ \n",
     "\n",
     "\n",
     "<b>Remark:</b> Wikipedia has a discussion of this in their article on <a href=\"https://en.wikipedia.org/wiki/Cantor_set\" target=\"_blank\">the Cantor Set</a>."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def cantors_set_contains(n,x):\n",
+    "    try:\n",
+    "        if n==0 and (x >= 0 and x <= 1):\n",
+    "            return True\n",
+    "        \n",
+    "        elif n>=1 and (x >= 0 and x <= 1):\n",
+    "            i = 1\n",
+    "            Start = 0; End = 1\n",
+    "            pivot1 = 0; pivot2 = 0\n",
+    "            \n",
+    "            while i <= n:\n",
+    "                interval = (End-Start)/3\n",
+    "                pivot1 = Start+interval\n",
+    "                pivot2 = Start+(2*interval)\n",
+    "\n",
+    "                if Start<=x and x<=pivot1:\n",
+    "                    End = pivot1\n",
+    "                elif pivot2<=x and x<=End:\n",
+    "                    Start = pivot2\n",
+    "                else:\n",
+    "                    return False\n",
+    "                i+=1\n",
+    "\n",
+    "            if Start <=x and x<=End:\n",
+    "                return True\n",
+    "            else:\n",
+    "                return False\n",
+    "            \n",
+    "        else:\n",
+    "            return False\n",
+    "    except Exception as error:\n",
+    "        return error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def cantors_set_contains_01(n,x):\n",
+    "    if x < 0:\n",
+    "        return False\n",
+    "\n",
+    "    if x <= 1:\n",
+    "        # Here we know that x lies in [0,1]\n",
+    "        if n==0:\n",
+    "            return True\n",
+    "        \n",
+    "\n",
+    "        if x <= 1/3:\n",
+    "            # Here we know x lies in [0,1/3].\n",
+    "            return cantors_set_contains(n-1, 3*x)\n",
+    "            \n",
+    "        if x < 2/3:\n",
+    "            # Here we know x lies in (1/3, 2/3) and n>1.\n",
+    "            return False\n",
+    "\n",
+    "        # Here we know x lies in [2/3, 1].\n",
+    "        return cantors_set_contains(n-1, 3*x-2)\n",
+    "\n",
+    "    # Here we know x>1.\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cantors_set_contains(3, 5/6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cantors_set_contains(10, 1/4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cantors_set_contains_01(3, 5/6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cantors_set_contains_01(10, 1/4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##10) The Sum of Sequence\n",
+    "Write a recursive function sum_sequence(f,N) which returns the sum of f(n) from $n=0$ to $N-1.$ Here $f$ should be a function which takes as input an integer and produces a number, and $N$ should be an integer bigger than zero. Note that sum_sequence(f,0) should always return zero."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def sum_sequence(f,N):\n",
+    "    if N==0:\n",
+    "        return 0\n",
+    "    return sum_sequence(f,N-1)+f(N-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.9552094821073802"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "sum_sequence(math.sin, 10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##11) The Fibonacci Sequence with Recursion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def fibonacci(n):\n",
+    "    if n == 0:\n",
+    "        return 0\n",
+    "    elif n == 1:\n",
+    "        return 1\n",
+    "    return fibonacci(n-2)+fibonacci(n-1)\n",
+    "\n",
+    "## Memoization Approach (Dynamic Programming)       \n",
+    "def fibonacci_m(n):\n",
+    "    memo = {0:0, 1:1}\n",
+    "    if not n in memo:\n",
+    "        memo[n] = fibonacci_m(n-1) + fibonacci_m(n-2)\n",
+    "    return memo[n]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fibonacci(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "377"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fibonacci_m(14)"
    ]
   },
   {
